--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Sophia (Turner) <me@sophia-dev.io>",
   "license": "MIT",
   "devDependencies": {
+    "@types/node-fetch": "2.6.7",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
     "eslint": "^8.57.0",
@@ -18,5 +19,8 @@
     "eslint-plugin-prettier": "^5.1.3",
     "tsup": "^8.0.2",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "node-fetch": "^2.6.7"
   }
 }
