--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsup --watch",
-    "build": "tsup"
+    "build": "tsup",
+    "test": "jest",
+    "lint": "eslint ./src"
   },
   "keywords": [],
   "author": "Sophia (Turner) <me@sophia-dev.io>",
