--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "tsup --watch",
     "build": "tsup",
     "test": "jest",
-    "lint": "eslint ./src"
+    "lint": "eslint ./src",
+    "prepare": "husky"
   },
   "keywords": [],
   "author": "Sophia (Turner) <me@sophia-dev.io>",
@@ -21,6 +22,7 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "husky": "^9.0.11",
     "jest": "^29.7.0",
     "nock": "14.0.0-beta.5",
     "ts-jest": "^29.1.2",
