--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "build": "tsup",
     "test": "jest",
     "lint": "eslint ./src",
-    "prepare": "husky"
+    "prepare": "husky",
+    "type-check": "tsc --noEmit"
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx}": "eslint --cache --fix",
+    "src/**/*.{js,jsx,ts,tsx,json,css,html}": "prettier --write --cache"
   },
   "keywords": [],
   "author": "Sophia (Turner) <me@sophia-dev.io>",
@@ -24,6 +29,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "husky": "^9.0.11",
     "jest": "^29.7.0",
+    "lint-staged": "^15.2.2",
     "nock": "14.0.0-beta.5",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
