--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jest": "^29.7.0",
     "lint-staged": "^15.2.2",
     "nock": "14.0.0-beta.5",
+    "prettier": "^3.2.5",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "tsup": "^8.0.2",
