--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "dev": "tsup --watch",
     "build": "tsup",
     "test": "jest",
-    "lint": "eslint ./src"
+    "lint": "eslint ./src",
+    "prepare": "husky",
+    "type-check": "tsc --noEmit"
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx}": "eslint --cache --fix",
+    "src/**/*.{js,jsx,ts,tsx,json,css,html}": "prettier --write --cache"
   },
   "keywords": [],
   "author": "Sophia (Turner) <me@sophia-dev.io>",
@@ -21,8 +27,11 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "husky": "^9.0.11",
     "jest": "^29.7.0",
+    "lint-staged": "^15.2.2",
     "nock": "14.0.0-beta.5",
+    "prettier": "^3.2.5",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "tsup": "^8.0.2",
